// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/activity-feed/keywords/Keywords should correctly render info icon 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Info
    words="cartoon font logo"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Tooltip
        className="box-ui-keywords-actions-tooltip"
        constrainToScrollParent={false}
        constrainToWindow={true}
        position="bottom-left"
        text={
          <FormattedMessage
            defaultMessage="Keywords: {words}"
            id="boxui.activityFeed.keywordsList"
            values={
              Object {
                "words": "cartoon font logo",
              }
            }
          />
        }
        theme="default"
      >
        <div
          className="box-ui-keywords-info"
        >
          <IconInfoInverted
            height={16}
            width={16}
          />
        </div>
      </Tooltip>,
      "className": "box-ui-keywords-actions",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div
          className="box-ui-keywords-info"
        >
          <IconInfoInverted
            height={16}
            width={16}
          />
        </div>,
        "className": "box-ui-keywords-actions-tooltip",
        "constrainToScrollParent": false,
        "constrainToWindow": true,
        "position": "bottom-left",
        "text": <FormattedMessage
          defaultMessage="Keywords: {words}"
          id="boxui.activityFeed.keywordsList"
          values={
            Object {
              "words": "cartoon font logo",
            }
          }
        />,
        "theme": "default",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <IconInfoInverted
            height={16}
            width={16}
          />,
          "className": "box-ui-keywords-info",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 16,
            "width": 16,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      "type": [Function],
    },
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Tooltip
          className="box-ui-keywords-actions-tooltip"
          constrainToScrollParent={false}
          constrainToWindow={true}
          position="bottom-left"
          text={
            <FormattedMessage
              defaultMessage="Keywords: {words}"
              id="boxui.activityFeed.keywordsList"
              values={
                Object {
                  "words": "cartoon font logo",
                }
              }
            />
          }
          theme="default"
        >
          <div
            className="box-ui-keywords-info"
          >
            <IconInfoInverted
              height={16}
              width={16}
            />
          </div>
        </Tooltip>,
        "className": "box-ui-keywords-actions",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <div
            className="box-ui-keywords-info"
          >
            <IconInfoInverted
              height={16}
              width={16}
            />
          </div>,
          "className": "box-ui-keywords-actions-tooltip",
          "constrainToScrollParent": false,
          "constrainToWindow": true,
          "position": "bottom-left",
          "text": <FormattedMessage
            defaultMessage="Keywords: {words}"
            id="boxui.activityFeed.keywordsList"
            values={
              Object {
                "words": "cartoon font logo",
              }
            }
          />,
          "theme": "default",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <IconInfoInverted
              height={16}
              width={16}
            />,
            "className": "box-ui-keywords-info",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 16,
              "width": 16,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        "type": [Function],
      },
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`features/activity-feed/keywords/Keywords should correctly render keywords 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Keywords
    action="applied"
    words="cartoon font logo brand clip art illustration line artwork"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="box-ui-keywords-message"
        >
          <FormattedMessage
            defaultMessage="Keywords were applied"
            id="boxui.activityFeed.keywordsAppliedList"
          />
        </span>,
        <Info
          words="cartoon font logo brand clip art illustration line artwork"
        />,
      ],
      "className": "box-ui-keywords",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="Keywords were applied"
            id="boxui.activityFeed.keywordsAppliedList"
          />,
          "className": "box-ui-keywords-message",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "defaultMessage": "Keywords were applied",
            "id": "boxui.activityFeed.keywordsAppliedList",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "words": "cartoon font logo brand clip art illustration line artwork",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="box-ui-keywords-message"
          >
            <FormattedMessage
              defaultMessage="Keywords were applied"
              id="boxui.activityFeed.keywordsAppliedList"
            />
          </span>,
          <Info
            words="cartoon font logo brand clip art illustration line artwork"
          />,
        ],
        "className": "box-ui-keywords",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Keywords were applied"
              id="boxui.activityFeed.keywordsAppliedList"
            />,
            "className": "box-ui-keywords-message",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "defaultMessage": "Keywords were applied",
              "id": "boxui.activityFeed.keywordsAppliedList",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "words": "cartoon font logo brand clip art illustration line artwork",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`features/activity-feed/keywords/Keywords should not render info icon if words are not passed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Keywords
    action="applied"
    words=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="box-ui-keywords-message"
        >
          <FormattedMessage
            defaultMessage="Keywords were applied"
            id="boxui.activityFeed.keywordsAppliedList"
          />
        </span>,
        null,
      ],
      "className": "box-ui-keywords",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="Keywords were applied"
            id="boxui.activityFeed.keywordsAppliedList"
          />,
          "className": "box-ui-keywords-message",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "defaultMessage": "Keywords were applied",
            "id": "boxui.activityFeed.keywordsAppliedList",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "span",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="box-ui-keywords-message"
          >
            <FormattedMessage
              defaultMessage="Keywords were applied"
              id="boxui.activityFeed.keywordsAppliedList"
            />
          </span>,
          null,
        ],
        "className": "box-ui-keywords",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Keywords were applied"
              id="boxui.activityFeed.keywordsAppliedList"
            />,
            "className": "box-ui-keywords-message",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "defaultMessage": "Keywords were applied",
              "id": "boxui.activityFeed.keywordsAppliedList",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
